--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>monte.media</artifactId>
-    <groupId>cc</groupId>
+    <groupId>ch.randelshofer</groupId>
+    <artifactId>montemedia-cc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Monte Media Library</name>
     <packaging>jar</packaging>
