--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.randelshofer</groupId>
     <artifactId>montemedia-cc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Monte Media Library</name>
     <packaging>jar</packaging>
     <properties>
@@ -21,5 +21,30 @@
     </dependencies>
     <build>
         <sourceDirectory>src/main</sourceDirectory>
+        <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/target/classes/org/monte/screenrecorder/images/
+                            </outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/org/monte/screenrecorder/images</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
